# Virtual-Intelligence

./: .gitignore  AlyssaCore.cpp  AlyssaCore.hpp  AlyssaMemoryHandler  AlyssaMemoryHandler.cpp  AlyssaNet  AlyssaNet.cpp  Alyssa_CLI.cpp  Alyssa_TRUE.cpp  CMakeLists.txt  ENDOCRINE_SYSTEM_IMPLEMENTATION.md  README.md  WeightedFusion_Trainer.py  alyssa.mem  alyssa_engine copy.py  api_client.py  api_main.py  dataset_gen.py  engine_tester.py  estrutura  fairy.py  fairy_conversations_v2.json  fairy_memory.json  fusion_router.onnx  fusion_router.onnx.data  json_to_sqlite.cpp  llama_stripped  llama_stripped.cpp  main  main.cpp  main_discord.py  main_test_engine.py  python_commiter.py  requirements.py  requirements.txt  tempCodeRunnerFile.py  test.py  test_api.cpp  test_api.py  test_cuda.cpp  (+26 more)
.github/workflows/: cmake-single-platform.yml  docs.yml
AlyssaOnQT/: ApiManager.js  ApiManager.qml  CMakeLists.txt  ChatHistoryModel.qml  ExportNotification.qml  Storage.qml  main.cpp  main.qml  resources.qrc
AlyssaUnreal/: AlssaUnreal.sln  AlssaUnreal.uproject
AlyssaUnreal/Config/: DefaultEngine.ini  DefaultGame.ini
AlyssaUnreal/Source/: AlssaUnreal.Target.cs  AlssaUnrealEditor.Target.cs
Embedding/: Embedder.cpp  Embedder.hpp
WeightedFusion/: WeightedFusion.cpp  WeightedFusion.hpp  WeightedFusion_Trainer.py
WindowsPowerShell/: Microsoft.PowerShell_profile.ps1
config/: ConfigsLLM.json  ConfigsTTS.json  LexiconPortuguese.json  characters.py  embedder_config.json  system_prompt.py
data/: alyssa.mem
datasets/: router_training_data.csv
docs/: Doxyfile  TODO.md
docs/.obsidian/: community-plugins.json  workspace.json
docs/api/: class_AdvancedMemorySystem.md  class_AlyssaCore.md  class_AlyssaMemoryManager.md  class_BufferStream.md  class_Client.md  class_ClientImpl.md  class_ContentProviderAdapter.md  class_ContentReader.md  class_CoreIntegration.md  class_DataSink.md  class_ElevenLabsTTS.md  class_Embedder.md  class_EmotionLexiconLoader.md  class_EmotionalAnalyzer.md  class_ExpertBase.md  class_FormDataParser.md  class_FusionRouter.md  class_IExpert.md  class_IScoreCalculator.md  class_LexiconScoreCalculator.md  class_MatcherBase.md  class_PCMetricsReader.md  class_PathParamsMatcher.md  class_RegexMatcher.md  class_Result.md  class_SQLStatementBuilder.md  class_SQLiteWrapper.md  class_Server.md  class_SocketStream.md  class_Stream.md  class_TaskQueue.md  class_TextNormalizer.md  class_ThreadPool.md  class_ThreadSafeQueue.md  class_Utils.md  class_VoicePipeline.md  class_WeightedFusion.md  class_basic_json.md  class_binary_reader.md  class_binary_writer.md  (+239 more)
docs/html/: AlyssaCore_8hpp.html  AlyssaCore_8hpp.js  AlyssaCore_8hpp_source.html  AlyssaMemoryHandler_8hpp_source.html  CoreLLM_8hpp_source.html  ElevenLabsTTS_8hpp_source.html  Embedder_8hpp_source.html  EmotionLexiconLoader_8hpp_source.html  ExpertBase_8hpp_source.html  IExpert_8hpp_source.html  VoicePipeline_8hpp_source.html  WeightedFusion_8hpp_source.html  annotated.html  annotated_dup.js  classCoreIntegration-members.html  classCoreIntegration.html  classCoreIntegration.js  classElevenLabsTTS-members.html  classElevenLabsTTS.html  classElevenLabsTTS.js  classEmbedder-members.html  classEmbedder.html  classEmbedder.js  classEmotionalAnalyzer-members.html  classEmotionalAnalyzer.html  classEmotionalAnalyzer.js  classIScoreCalculator-members.html  classIScoreCalculator.html  classIScoreCalculator.js  classLexiconScoreCalculator-members.html  classLexiconScoreCalculator.html  classLexiconScoreCalculator.js  classPCMetricsReader-members.html  classPCMetricsReader.html  classPCMetricsReader.js  classSQLStatementBuilder-members.html  classSQLStatementBuilder.html  classTextNormalizer-members.html  classTextNormalizer.html  classThreadSafeQueue-members.html  (+572 more)
docs/latex/: AlyssaCore_8hpp.tex  AlyssaCore_8hpp_source.tex  AlyssaMemoryHandler_8hpp_source.tex  CoreLLM_8hpp_source.tex  ElevenLabsTTS_8hpp_source.tex  Embedder_8hpp_source.tex  EmotionLexiconLoader_8hpp_source.tex  ExpertBase_8hpp_source.tex  IExpert_8hpp_source.tex  VoicePipeline_8hpp_source.tex  WeightedFusion_8hpp_source.tex  annotated.tex  classCoreIntegration.tex  classElevenLabsTTS.tex  classEmbedder.tex  classEmotionalAnalyzer.tex  classIScoreCalculator.eps  classIScoreCalculator.tex  classLexiconScoreCalculator.eps  classLexiconScoreCalculator.tex  classPCMetricsReader.tex  classSQLStatementBuilder.tex  classTextNormalizer.tex  classThreadSafeQueue.tex  classUtils.tex  classVoicePipeline.tex  classWeightedFusion__Trainer_1_1FusionRouter.eps  classalyssa__core_1_1AlyssaCore.tex  (+280 more)
engine/: ai_control.py  alyssa_engine.py  pc_controller.py  screen_capture.py  test_vision_pc.py  vision_module.py
fairy/: old_fairy.py
inOut/: voice_input.py  voice_input_old.py  voice_output.py  voice_output_eleven.py  voice_output_eleven_discord.py  whosTalking.py
includes/: AlyssaCore.hpp  AlyssaMemoryHandler.cpp  AlyssaMemoryHandler.hpp  AlyssaNet.cpp  CoreLLM.hpp  DatasetTools.cpp  DatasetTools.hpp  EmotionLexiconLoader.cpp  EmotionLexiconLoader.hpp  EndocrineSystem.cpp  EndocrineSystem.hpp  ExpertBase.hpp  HyprlandContext.cpp  HyprlandContext.hpp  IExpert.hpp  InputCapture.cpp  InputCapture.hpp  OpenCVExpert.cpp  OpenCVExpert.hpp  VisionEnhancer.cpp  VisionEnhancer.hpp  log.hpp  pc_metrics_reader.cpp
memory/: alyssa_memory.py  teste.py
models/: alyssa_brain.py
phoneme_cache/: bXlfZGF0YXNldF9lbiN3YXZzXHNhbXBsZTExMA==_phoneme.npy  bXlfZGF0YXNldF9qYSN3YXZzXHNhbXBsZTU0Ng==_phoneme.npy
testers/: debug_brain_test.py  debug_internal_dialogue.py  teste_tts.py  xtts_test.py
tests/: test_elevenlabs.cpp  test_embedder.cpp  test_llama.cpp  test_llama_infer.cpp  test_main.cpp  test_mem_load.cpp  test_mqtt.cpp  test_piper.cpp  test_tts.cpp  test_voice.cpp  test_whisper.cpp  text_to_token.cpp
training/: check_dataset.py  corrigir_csv.py  dataset_normalizer.py  fix_metadata.py  main_frontend.py  prepare_data.py  treinador-vits-ja-en_gemini_tweaked.py
voice/: ElevenLabsTTS.cpp  PiperTTS.cpp  VoicePipeline.cpp  VoicePipeline.hpp
voice_profiles/: deyvid.npy  embedding_gen.py
(+247 files in other folders)
